--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "peerDependencies": {
     "@popperjs/core": "^2.11.6",
     "classnames": "^2.3.2",
-    "flowbite": "^1.6.3",
+    "flowbite": "github:Zhincore/zhin-flowbite",
     "svelte": "^3.55.1"
   },
   "devDependencies": {
@@ -47,6 +47,7 @@
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "flowbite": "^1.6.5",
     "mdsvex": "^0.10.6",
     "mdsvexamples": "^0.3.3",
     "postcss": "^8.4.21",
@@ -111,8 +112,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
-    "classnames": "^2.3.2",
-    "flowbite": "^1.6.3"
+    "classnames": "^2.3.2"
   },
   "engines": {
     "npm": ">=7.0.0",
